# ChangeLog for app-admin/tenshi
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/tenshi/ChangeLog,v 1.69 2012/05/09 20:08:31 ago Exp $

  09 May 2012; Agostino Sarubbo <ago@gentoo.org> -tenshi-0.10-r3.ebuild:
  Remove old

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> tenshi-0.12.ebuild:
  x86 stable wrt bug #396759

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> tenshi-0.10-r3.ebuild,
  tenshi-0.12.ebuild:
  Drop sparc keywords

  04 Mar 2012; Pacho Ramos <pacho@gentoo.org>
  +files/tenshi-openrc-init-r1.patch, tenshi-0.12.ebuild:
  Fix init.d script, bug 398987 by Adam James.

  05 Feb 2012; Brent Baude <ranger@gentoo.org> tenshi-0.12.ebuild:
  Marking tenshi-0.12 ppc for bug 396759

  02 Feb 2012; Agostino Sarubbo <ago@gentoo.org> tenshi-0.12.ebuild:
  Stable for amd64, wrt bug #396759

*tenshi-0.12 (16 Jun 2011)

  16 Jun 2011; Jeroen Roovers <jer@gentoo.org>
  files/tenshi-0.10-solo-queue-escalation.patch,
  files/tenshi-0.10-warn-logfile.patch, +tenshi-0.12.ebuild,
  files/tenshi-create-mandir.patch, files/tenshi-openrc-init.patch,
  files/tenshi-remove-timezone-cache.patch:
  Version bump. Clean up patches.

  15 Oct 2010; Michael Weber <xmw@gentoo.org>
  -files/tenshi-0.9.1-fix-tail_pids-array-length.patch:
  remove unused patch (wrt bug 340089 by jalan)

  02 Jun 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove hncaldwell from metadata.xml (#230778)

  26 Oct 2009; Heath Caldwell <hncaldwell@gentoo.org>
  -tenshi-0.9.1-r1.ebuild, -tenshi-0.10.ebuild, -tenshi-0.10-r1.ebuild,
  -tenshi-0.10-r2.ebuild, tenshi-0.10-r3.ebuild:
  Added die if emake fails.  Removed old versions.

  01 Feb 2009; nixnut <nixnut@gentoo.org> tenshi-0.10-r3.ebuild:
  ppc stable #256858

  01 Feb 2009; Markus Meier <maekke@gentoo.org> tenshi-0.10-r3.ebuild:
  amd64/x86 stable, bug #256858

  30 Jan 2009; Ferris McCormick <fmccor@gentoo.org> tenshi-0.10-r3.ebuild:
  Sparc stable, Bug #256858.
