@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/tenshi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/tenshi/ChangeLog,v 1.69 2012/05/09 20:08:31 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/tenshi/ChangeLog,v 1.70 2012/05/31 02:59:03 zmedico Exp $
+
+  31 May 2012; Zac Medico <zmedico@gentoo.org> tenshi-0.12.ebuild:
+  inherit user for enewgroup and enewuser
 
   09 May 2012; Agostino Sarubbo <ago@gentoo.org> -tenshi-0.10-r3.ebuild:
   Remove old
